--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -8,3 +8,14 @@ spring.kafka.topic.name: order_topics
 spring.kafka.consumer.group-id: stock
 spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+spring.datasource.url=jdbc:mysql://localhost:3306/stocks
+spring.datasource.username=root
+spring.datasource.password=Ventotdi1.6
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
