--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.datasource.url=jdbc:mysql://localhost:3306/stocks
-spring.datasource.username=root
-spring.datasource.password=Ventotdi1.6
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
